order books in litereary route (#41)