@@ -12,6 +12,9 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Component("LiteraryRouteMapper")
 @RequiredArgsConstructor
@@ -36,15 +39,22 @@ public class LiteraryRouteMapper {
                 .rating(literaryRoute.getRating())
                 .name(literaryRoute.getName())
                 .description(literaryRoute.getDescription())
-                .bookResponsesList(mapDesiredBooks(literaryRoute.getBooks()))
+                .bookResponsesList(mapDesiredBooks(literaryRoute.getBooks(), literaryRoute.getBookIdsOrder()))
                 .userResponse(userDTOMapper.fromUserToUserResponse(literaryRoute.getUser()))
                 .build();
     }
 
-    private List<BookResponse> mapDesiredBooks(List<Book> desiredBooks) {
-        return desiredBooks.stream()
-                .map(desiredBook -> objectMapper.convertValue(desiredBook, BookDTO.class))
+    private List<BookResponse> mapDesiredBooks(List<Book> desiredBooks, List<Long> bookIdsOrder) {
+        // Create a map to store books by their ID
+        Map<Long, Book> bookMap = desiredBooks.stream()
+                .collect(Collectors.toMap(Book::getId, book -> book));
+
+        // Use the bookIdsOrder to retrieve and map the books in the correct order
+        return bookIdsOrder.stream()
+                .map(bookMap::get)
+                .filter(Objects::nonNull)
+                .map(book -> objectMapper.convertValue(book, BookDTO.class))
                 .map(bookMapper::fromBookDTOToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
